# bindings/go/temporal/model_redfish_provisioning_input.go
@@ -35,6 +35,8 @@ type RedfishProvisioningInput struct {
 	Port *int32 `json:"port,omitempty"`
 	// Site containing the BMC network to provision.
 	Site string `json:"site"`
+	// DCIM model that owns the site identifier.
+	SiteModel NullableString `json:"site_model,omitempty"`
 }
 
 type _RedfishProvisioningInput RedfishProvisioningInput
@@ -263,6 +265,51 @@ func (o *RedfishProvisioningInput) SetSite(v string) {
 	o.Site = v
 }
 
+// GetSiteModel returns the SiteModel field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *RedfishProvisioningInput) GetSiteModel() string {
+	if o == nil || IsNil(o.SiteModel.Get()) {
+		var ret string
+		return ret
+	}
+	return *o.SiteModel.Get()
+}
+
+// GetSiteModelOk returns a tuple with the SiteModel field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+
+func (o *RedfishProvisioningInput) GetSiteModelOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.SiteModel.Get(), o.SiteModel.IsSet()
+}
+
+// HasSiteModel returns a boolean if a field has been set.
+func (o *RedfishProvisioningInput) HasSiteModel() bool {
+	if o != nil && o.SiteModel.IsSet() {
+		return true
+	}
+
+	return false
+}
+
+// SetSiteModel gets a reference to the given NullableString and assigns it to the SiteModel field.
+func (o *RedfishProvisioningInput) SetSiteModel(v string) {
+	o.SiteModel.Set(&v)
+}
+
+// SetSiteModelNil sets the value for SiteModel to be an explicit nil
+func (o *RedfishProvisioningInput) SetSiteModelNil() {
+	o.SiteModel.Set(nil)
+}
+
+// UnsetSiteModel ensures that no value is present for SiteModel, not even an explicit nil
+func (o *RedfishProvisioningInput) UnsetSiteModel() {
+	o.SiteModel.Unset()
+}
+
 func (o RedfishProvisioningInput) MarshalJSON() ([]byte, error) {
 	toSerialize, err := o.ToMap()
 	if err != nil {
@@ -286,6 +333,9 @@ func (o RedfishProvisioningInput) ToMap() (map[string]interface{}, error) {
 		toSerialize["port"] = o.Port
 	}
 	toSerialize["site"] = o.Site
+	if o.SiteModel.IsSet() {
+		toSerialize["site_model"] = o.SiteModel.Get()
+	}
 	return toSerialize, nil
 }
 
