# bindings/go/temporal/model_sp_x_overlay_assignment_input.go
@@ -30,6 +30,8 @@ type SpXOverlayAssignmentInput struct {
 	PortNames []string `json:"port_names"`
 	// Site containing the target network device.
 	Site string `json:"site"`
+	// DCIM model that owns the site identifier.
+	SiteModel NullableString `json:"site_model,omitempty"`
 }
 
 type _SpXOverlayAssignmentInput SpXOverlayAssignmentInput
@@ -208,6 +210,51 @@ func (o *SpXOverlayAssignmentInput) SetSite(v string) {
 	o.Site = v
 }
 
+// GetSiteModel returns the SiteModel field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *SpXOverlayAssignmentInput) GetSiteModel() string {
+	if o == nil || IsNil(o.SiteModel.Get()) {
+		var ret string
+		return ret
+	}
+	return *o.SiteModel.Get()
+}
+
+// GetSiteModelOk returns a tuple with the SiteModel field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+
+func (o *SpXOverlayAssignmentInput) GetSiteModelOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.SiteModel.Get(), o.SiteModel.IsSet()
+}
+
+// HasSiteModel returns a boolean if a field has been set.
+func (o *SpXOverlayAssignmentInput) HasSiteModel() bool {
+	if o != nil && o.SiteModel.IsSet() {
+		return true
+	}
+
+	return false
+}
+
+// SetSiteModel gets a reference to the given NullableString and assigns it to the SiteModel field.
+func (o *SpXOverlayAssignmentInput) SetSiteModel(v string) {
+	o.SiteModel.Set(&v)
+}
+
+// SetSiteModelNil sets the value for SiteModel to be an explicit nil
+func (o *SpXOverlayAssignmentInput) SetSiteModelNil() {
+	o.SiteModel.Set(nil)
+}
+
+// UnsetSiteModel ensures that no value is present for SiteModel, not even an explicit nil
+func (o *SpXOverlayAssignmentInput) UnsetSiteModel() {
+	o.SiteModel.Unset()
+}
+
 func (o SpXOverlayAssignmentInput) MarshalJSON() ([]byte, error) {
 	toSerialize, err := o.ToMap()
 	if err != nil {
@@ -227,6 +274,9 @@ func (o SpXOverlayAssignmentInput) ToMap() (map[string]interface{}, error) {
 	}
 	toSerialize["port_names"] = o.PortNames
 	toSerialize["site"] = o.Site
+	if o.SiteModel.IsSet() {
+		toSerialize["site_model"] = o.SiteModel.Get()
+	}
 	return toSerialize, nil
 }
 
