# bindings/go/temporal/model_sp_x_overlay_deletion_input.go
@@ -27,6 +27,8 @@ type SpXOverlayDeletionInput struct {
 	OverlayId string `json:"overlay_id"`
 	// Site containing the SpX overlay to delete.
 	Site string `json:"site"`
+	// DCIM model that owns the site identifier.
+	SiteModel NullableString `json:"site_model,omitempty"`
 }
 
 type _SpXOverlayDeletionInput SpXOverlayDeletionInput
@@ -135,6 +137,51 @@ func (o *SpXOverlayDeletionInput) SetSite(v string) {
 	o.Site = v
 }
 
+// GetSiteModel returns the SiteModel field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *SpXOverlayDeletionInput) GetSiteModel() string {
+	if o == nil || IsNil(o.SiteModel.Get()) {
+		var ret string
+		return ret
+	}
+	return *o.SiteModel.Get()
+}
+
+// GetSiteModelOk returns a tuple with the SiteModel field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+
+func (o *SpXOverlayDeletionInput) GetSiteModelOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.SiteModel.Get(), o.SiteModel.IsSet()
+}
+
+// HasSiteModel returns a boolean if a field has been set.
+func (o *SpXOverlayDeletionInput) HasSiteModel() bool {
+	if o != nil && o.SiteModel.IsSet() {
+		return true
+	}
+
+	return false
+}
+
+// SetSiteModel gets a reference to the given NullableString and assigns it to the SiteModel field.
+func (o *SpXOverlayDeletionInput) SetSiteModel(v string) {
+	o.SiteModel.Set(&v)
+}
+
+// SetSiteModelNil sets the value for SiteModel to be an explicit nil
+func (o *SpXOverlayDeletionInput) SetSiteModelNil() {
+	o.SiteModel.Set(nil)
+}
+
+// UnsetSiteModel ensures that no value is present for SiteModel, not even an explicit nil
+func (o *SpXOverlayDeletionInput) UnsetSiteModel() {
+	o.SiteModel.Unset()
+}
+
 func (o SpXOverlayDeletionInput) MarshalJSON() ([]byte, error) {
 	toSerialize, err := o.ToMap()
 	if err != nil {
@@ -150,6 +197,9 @@ func (o SpXOverlayDeletionInput) ToMap() (map[string]interface{}, error) {
 	}
 	toSerialize["overlay_id"] = o.OverlayId
 	toSerialize["site"] = o.Site
+	if o.SiteModel.IsSet() {
+		toSerialize["site_model"] = o.SiteModel.Get()
+	}
 	return toSerialize, nil
 }
 
